apps/monitoring/uptime-kuma/deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: uptime-kuma
  namespace: monitoring

spec:
  replicas: 2

  selector:
    matchLabels:
      app: uptime-kuma

  template:
    metadata:
      labels:
        app: uptime-kuma

    spec:
      containers:
      - name: uptime-kuma
        image: louislam/uptime-kuma:1
        
        volumeMounts:
        - name: kuma-data
          mountPath: /app/data

        ports:
        - containerPort: 3001

        resources:
          requests:
            memory: "128Mi"
            cpu: "100m"

          limits:
            memory: "512Mi"
            cpu: "500m"
        
      volumes:
      - name: kuma-data
        persistentVolumeClaim:
          claimName: uptime-kuma-pvc
